# weatherfs

./: .gitignore  CMakeLists.txt  Makefile  README.md  test_weatherfs.sh  weatherfs.c  weatherfs.json
